fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
     margin: auto;
     text-align:center;
     align-content: center;
-    margin-top:20%;
-    margin-bottom:20%;
+    margin-top:15%;
+    margin-bottom:15%;
 }
 h1{
     font-family: 'ZCOOL XiaoWei', serif;
